+ .sdkmanrc, Jenkinsfile